made plant prefabs, added click interaction

--- a/BotanicalJourney/Projects/CollaborativeSandbox/index.html
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/index.html
@@ -33,7 +33,14 @@
   <script type="module" src="./src/main.ts"></script>
 
   <div id="main">
-    <needle-engine></needle-engine> 
+    <needle-engine>
+      <div class=" journal desktop ar" style="pointer-events:none;">
+        Plants collected
+        <div id="plant-counter" class="plant-number">
+          0
+        </div>
+    </div>
+    </needle-engine> 
   </div>
 </body>
 </html>
