added html and css elements for journal ui

--- a/BotanicalJourney/Projects/CollaborativeSandbox/index.html
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/index.html
@@ -34,12 +34,22 @@
 
   <div id="main">
     <needle-engine>
-      <div class=" journal desktop ar" style="pointer-events:none;">
+      
+      <div id="journal-container" class="hide ar desktop">
+        <h1 id="plant-name">
+          Keine Blumen gefunden
+        </h1>
+
+      </div>
+
+      <button id="journalButton" class="ar desktop"> Buch</button>
+
+     <!-- <div class="journal-counter desktop ar" style="pointer-events:none;">
         Plants collected
         <div id="plant-counter" class="plant-number">
           0
-        </div>
-    </div>
+        </div> 
+     </div> -->
     </needle-engine> 
   </div>
 </body>
