show images in journal + ui is visible in AR

--- a/BotanicalJourney/Projects/CollaborativeSandbox/index.html
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/index.html
@@ -40,20 +40,48 @@
 
   <div id="main">
     <needle-engine>
-
+      
+      <div id="content" class="ar desktop">
       
       <div id="journal-container" class="hide ar desktop">
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide" id="p1">Blume 1</div>
-            <div class="swiper-slide" id="p2">Slide 2</div>
-            <div class="swiper-slide" id="p3">Slide 3</div>
-            <div class="swiper-slide" id="p4">Slide 4</div>
-            <div class="swiper-slide" id="p5">Slide 5</div>
-            <div class="swiper-slide" id="p6">Slide 6</div>
-            <div class="swiper-slide" id="p7">Slide 7</div>
-            <div class="swiper-slide" id="p8">Slide 8</div>
-            <div class="swiper-slide" id="p9">Slide 9</div>
+            <div class="swiper-slide" id="p1">
+              <div class="plantName">Blume 1</div>
+              <img class="plantImage" src="./src/images/noPlant.png">
+
+            </div>
+            <div class="swiper-slide" id="p2">
+              <div class="plantName">Blume 1</div>
+              <img class="plantImage" src="./src/images/noPlant.png">
+            </div>
+            <div class="swiper-slide" id="p3">
+              <div class="plantName">Blume 1</div>
+              <img class="plantImage" src="./src/images/noPlant.png">
+            </div>
+            <div class="swiper-slide" id="p4">
+              <div class="plantName">Blume 1</div>
+              <img class="plantImage" src="./src/images/noPlant.png">
+            </div>
+            <div class="swiper-slide" id="p5">
+              <div class="plantName">Blume 1</div>
+              <img class="plantImage" src="./src/images/noPlant.png"></div>
+            <div class="swiper-slide" id="p6">
+              <div class="plantName">Blume 1</div>
+              <img class="plantImage" src="./src/images/noPlant.png">
+            </div>
+            <div class="swiper-slide" id="p7">
+              <div class="plantName">Blume 1</div>
+              <img class="plantImage" src="./src/images/noPlant.png">
+            </div>
+            <div class="swiper-slide" id="p8">
+              <div class="plantName">Blume 1</div>
+              <img class="plantImage" src="./src/images/noPlant.png">
+            </div>
+            <div class="swiper-slide" id="p9">
+              <div class="plantName">Blume 1</div>
+              <img class="plantImage" src="./src/images/noPlant.png">
+            </div>
           </div>
         </div>
 
@@ -64,13 +92,14 @@
       </div>
 
       <button id="journalButton" class="ar desktop"> Buch</button>
-
+    </div>
      <!-- <div class="journal-counter desktop ar" style="pointer-events:none;">
         Plants collected
         <div id="plant-counter" class="plant-number">
           0
         </div> 
      </div> -->
+   
     </needle-engine> 
   </div>
 
