added plant location and description to html

--- a/BotanicalJourney/Projects/CollaborativeSandbox/index.html
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-  <meta charset="UTF-8" />
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌵</text></svg>">
   <meta name="viewport" content="width=device-width, user-scalable=no">
 
@@ -46,41 +46,71 @@
       <div id="journal-container" class="hide ar desktop">
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
+
             <div class="swiper-slide" id="p1">
               <div class="plantName">Blume 1</div>
               <img class="plantImage" src="./src/images/noPlant.png">
-
+              <div class="location-container">
+                <div class="plantLocation">Halle</div>
+              </div>
+              
+              <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+              
             </div>
+
             <div class="swiper-slide" id="p2">
               <div class="plantName">Blume 1</div>
               <img class="plantImage" src="./src/images/noPlant.png">
+              <div class="plantLocation">Halle</div>
+              <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
             </div>
+
             <div class="swiper-slide" id="p3">
               <div class="plantName">Blume 1</div>
               <img class="plantImage" src="./src/images/noPlant.png">
+              <div class="plantLocation">Halle</div>
+              <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
             </div>
             <div class="swiper-slide" id="p4">
               <div class="plantName">Blume 1</div>
               <img class="plantImage" src="./src/images/noPlant.png">
+              <div class="plantLocation">Halle</div>
+              <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
             </div>
             <div class="swiper-slide" id="p5">
               <div class="plantName">Blume 1</div>
-              <img class="plantImage" src="./src/images/noPlant.png"></div>
+              <img class="plantImage" src="./src/images/noPlant.png">
+              <div class="plantLocation">Halle</div>
+              <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+            </div>
+
+
             <div class="swiper-slide" id="p6">
               <div class="plantName">Blume 1</div>
               <img class="plantImage" src="./src/images/noPlant.png">
+              <div class="plantLocation">Halle</div>
+              <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
             </div>
+
             <div class="swiper-slide" id="p7">
               <div class="plantName">Blume 1</div>
               <img class="plantImage" src="./src/images/noPlant.png">
+              <div class="plantLocation">Halle</div>
+              <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
             </div>
+
             <div class="swiper-slide" id="p8">
               <div class="plantName">Blume 1</div>
               <img class="plantImage" src="./src/images/noPlant.png">
+              <div class="plantLocation">Halle</div>
+              <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
             </div>
+
             <div class="swiper-slide" id="p9">
               <div class="plantName">Blume 1</div>
               <img class="plantImage" src="./src/images/noPlant.png">
+              <div class="plantLocation">Halle</div>
+              <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
             </div>
           </div>
         </div>
