added sound, journal scrolls to a pace with new plant, context click in ar fixed, affordance for journal button

--- a/BotanicalJourney/Projects/CollaborativeSandbox/index.html
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/index.html
@@ -47,6 +47,9 @@
             <div class="swiper-wrapper">
 
               <div class="swiper-slide" id="p1">
+                <div class="plant-placeholder-container ">
+                  <div class="plantDiscription"><br><br>Du hast diese Pflanze noch nicht entdeckt</div>
+                </div>
                 <div class="plant-info-container unrevealed">
                   <div class="plantName">Blume 1</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
@@ -58,6 +61,9 @@
               </div>
 
               <div class="swiper-slide" id="p2">
+                <div class="plant-placeholder-container ">
+                  <div class="plantDiscription"><br><br>Du hast diese Pflanze noch nicht entdeckt</div>
+                </div>
                 <div class="plant-info-container unrevealed">
                   <div class="plantName">Blume 2</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
@@ -69,6 +75,9 @@
               </div>
 
               <div class="swiper-slide" id="p3">
+                <div class="plant-placeholder-container ">
+                  <div class="plantDiscription"><br><br>Du hast diese Pflanze noch nicht entdeckt</div>
+                </div>
                 <div class="plant-info-container unrevealed">
                   <div class="plantName">Blume 3</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
@@ -81,6 +90,9 @@
 
 
               <div class="swiper-slide" id="p4">
+                <div class="plant-placeholder-container ">
+                  <div class="plantDiscription"><br><br>Du hast diese Pflanze noch nicht entdeckt</div>
+                </div>
                 <div class="plant-info-container unrevealed">
                   <div class="plantName">Blume 4</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
@@ -92,6 +104,9 @@
               </div>
 
               <div class="swiper-slide" id="p5">
+                <div class="plant-placeholder-container ">
+                  <div class="plantDiscription"><br><br>Du hast diese Pflanze noch nicht entdeckt</div>
+                </div>
                 <div class="plant-info-container unrevealed">
                   <div class="plantName">Blume 5</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
@@ -104,6 +119,9 @@
 
 
               <div class="swiper-slide" id="p6">
+                <div class="plant-placeholder-container ">
+                  <div class="plantDiscription"><br><br>Du hast diese Pflanze noch nicht entdeckt</div>
+                </div>
                 <div class="plant-info-container unrevealed">
                   <div class="plantName">Blume 6</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
@@ -115,6 +133,9 @@
               </div>
 
               <div class="swiper-slide" id="p7">
+                <div class="plant-placeholder-container ">
+                  <div class="plantDiscription"><br><br>Du hast diese Pflanze noch nicht entdeckt</div>
+                </div>
                 <div class="plant-info-container unrevealed">
                   <div class="plantName">Blume 7</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
@@ -126,6 +147,9 @@
               </div>
 
               <div class="swiper-slide" id="p8">
+                <div class="plant-placeholder-container ">
+                  <div class="plantDiscription"><br><br>Du hast diese Pflanze noch nicht entdeckt</div>
+                </div>
                 <div class="plant-info-container unrevealed">
                   <div class="plantName">Blume 8</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
@@ -137,6 +161,10 @@
               </div>
 
               <div class="swiper-slide" id="p9">
+                <div class="plant-placeholder-container ">
+                  <div class="plantDiscription"><br><br>Du hast diese Pflanze noch nicht entdeckt</div>
+                </div>
+
                 <div class="plant-info-container unrevealed">
                   <div class="plantName">Blume 9</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
@@ -148,6 +176,10 @@
               </div>
 
               <div class="swiper-slide" id="p10">
+                <div class="plant-placeholder-container ">
+                  <div class="plantDiscription"><br><br>Du hast diese Pflanze noch nicht entdeckt</div>
+                </div>
+
                 <div class="plant-info-container unrevealed">
                   <div class="plantName">Blume 10</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
@@ -159,6 +191,10 @@
               </div>
 
               <div class="swiper-slide" id="p11">
+                <div class="plant-placeholder-container ">
+                  <div class="plantDiscription"><br><br>Du hast diese Pflanze noch nicht entdeckt</div>
+                </div>
+
                 <div class="plant-info-container unrevealed">
                   <div class="plantName">Blume 11</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
@@ -170,6 +206,9 @@
               </div>
 
               <div class="swiper-slide" id="p12">
+                <div class="plant-placeholder-container ">
+                  <div class="plantDiscription"><br><br>Du hast diese Pflanze noch nicht entdeckt</div>
+                </div>
                 <div class="plant-info-container unrevealed">
                   <div class="plantName">Blume 12</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
@@ -184,15 +223,12 @@
             </div>
           </div>
 
-          <h1 id="plant-name">
-            Keine Blumen gefunden
-          </h1>
 
         </div>
 
         <button id="journalButton" class="ar desktop"> Journal</button>
       </div>
-      <!-- <div class="journal-counter desktop ar" style="pointer-events:none;">
+       <!--<div class="journal-counter desktop ar" style="pointer-events:none;">
         Plants collected
         <div id="plant-counter" class="plant-number">
           0
