--- a/BotanicalJourney/Projects/CollaborativeSandbox/index.html
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/index.html
@@ -46,6 +46,13 @@
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
 
+              <div class="swiper-slide" id="startseite">
+                <div class="plant-placeholder-container ">
+                  <div class="plantDiscription"><br><br>Startseite</div>
+                </div>
+                
+              </div>
+
               <div class="swiper-slide" id="p1">
                 <div class="plant-placeholder-container ">
                   <div class="plantDiscription"><br><br>Du hast diese Pflanze noch nicht entdeckt</div>
