changed description of the plans and addded start page text

--- a/BotanicalJourney/Projects/CollaborativeSandbox/index.html
+++ b/BotanicalJourney/Projects/CollaborativeSandbox/index.html
@@ -48,7 +48,13 @@
 
               <div class="swiper-slide" id="startseite">
                 <div class="plant-placeholder-container ">
-                  <div class="plantDiscription"><br><br>Startseite</div>
+                  <div class="titel"><br><br>Botanical Journey</div>
+                  <div class="start">
+                  <div class="start_text">Entdecke und sammle die vielen verschiedenen Pflanzen auf dieser Welt.                    
+                  </div>
+                  <div class="start_text">Klicke auf eine Pflanze und erhalte Informationen in deinem Journal.</div>
+                  </div>
+                  
                 </div>
                 
               </div>
@@ -61,9 +67,12 @@
                   <div class="plantName">Blume 1</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
                   <div class="location-container">
-                    <div class="plantLocation">Halle</div>
+                    <div class="plantLocation">Vorkommen: Europa, Arabische Halbinsel</div>
                   </div>
-                  <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+                  <div class="plantDiscription">Beschreibung: Sukkulentes Kraut, dass 50-80 cm hoch wächst. Die hell- bis graugrünen Blätter wachsen in einer Rosette
+                  und sind stark fleischig und bis zu 50 cm lang. Der Rand ist gezähnt. Hier ist nur die Blüte zu sehen. Die
+                  röhrenfömigen gelben Blüten sind in einer Traube angeordnet. Botanische Zeichnung von Georg Schweinfurth, 1888.
+</div>
                 </div>
               </div>
 
@@ -75,9 +84,11 @@
                   <div class="plantName">Blume 2</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
                   <div class="location-container">
-                    <div class="plantLocation">Halle</div>
+                    <div class="plantLocation">Vorkommen: Jemen</div>
                   </div>
-                  <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+                  <div class="plantDiscription">Beschreibung: Ein Kraut mit unregelmäßigen, flachen, kreisförmigen, filzigen, dunkelgrünen Blättern an der Basis der
+                  Pflanze. Der Blütenstiel und die Blüten sind auffallend rosa. Botanische Zeichnung von Georg Schweinfurth, 1881.
+</div>
                 </div>
               </div>
 
@@ -89,9 +100,12 @@
                   <div class="plantName">Blume 3</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
                   <div class="location-container">
-                    <div class="plantLocation">Halle</div>
+                    <div class="plantLocation">Vorkommen: Ostküste Afrika</div>
                   </div>
-                  <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+                  <div class="plantDiscription">Beschreibung: Aufrechter, weichholziger Strauch mit einer Höhe von 2-4 m. Blätter sind eiförmig und spitz zum Stengel
+                  zulauffend. Die Blüten stehen anfangs aufrecht, später hängend in einer Dolde. Der Kelch ist gelblich, die Blütenblätter
+                  sind leuchtend rot. Botanische Zeichnung von Georg Schweinfurth, 1891.
+</div>
                 </div>
               </div>
 
@@ -104,9 +118,12 @@
                   <div class="plantName">Blume 4</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
                   <div class="location-container">
-                    <div class="plantLocation">Halle</div>
+                    <div class="plantLocation">Vorkommen: Ostafrika und sübwestliche Arabische</div>
                   </div>
-                  <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+                  <div class="plantDiscription">Beschreibung: Strauchförmiges Kraut mit gut entwickeltem Wurzelstock und einer Länge von bis zu 80 cm. Die Blätter sind
+                  verkehrt eiförmig. Der Kelch ist röhrenförmig und ca. 8-12 mm lang. Die Blüte ist blau bis violett. Botanische
+                  Zeichnung von Georg Schweinfurth, 1880.
+</div>
                 </div>
               </div>
 
@@ -118,9 +135,12 @@
                   <div class="plantName">Blume 5</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
                   <div class="location-container">
-                    <div class="plantLocation">Halle</div>
+                    <div class="plantLocation">Vorkommen: Westafrika, Arabische Halbinsel, Indien</div>
                   </div>
-                  <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+                  <div class="plantDiscription">Beschreibung: Ein strauchiges Kraut bis zu 1,5m Höhe. Die Blätter sind herzfömig und an der Spitze zugespitzt mit gezähntem Rand. 
+                    Die Blütenblätter sind Gelb bis Orange mit Dunkelrotem bis Violettem Grund. Botanische
+                  Zeichnung von Georg Forster.
+</div>
                 </div>
               </div>
 
@@ -133,9 +153,12 @@
                   <div class="plantName">Blume 6</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
                   <div class="location-container">
-                    <div class="plantLocation">Halle</div>
+                    <div class="plantLocation">Vorkommen: Neuseeland</div>
                   </div>
-                  <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+                  <div class="plantDiscription">Beschreibung: Fleischiger Strauch mit dunklen, gegliederten Zweigen, die große, dunkelgrüne und herzförmige
+                  Blätter haben. Die Blätter sind bis zu 120 mm breit und die Adern verlaufen strahlenförmig von der Mitte aus, sie schmecken
+                  pfeffrig und haben oft Insektenlöcher. Botanische Zeichnung von Georg Forster.
+</div>
                 </div>
               </div>
 
@@ -147,9 +170,12 @@
                   <div class="plantName">Blume 7</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
                   <div class="location-container">
-                    <div class="plantLocation">Halle</div>
+                    <div class="plantLocation">Vorkommen: Mittelmeerraum bis nach China</div>
                   </div>
-                  <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+                  <div class="plantDiscription">Beschreibung: Eine krautige, minzige Pflanze mit einer Wuchshöhe von 30-80 cm. Der
+                  Stengel ist weichhaarig. Die relativ kleinen Blätter sind rundlich und haben einen kerbigen Rand. Die Blüten sind
+                  hellila bis weiß. Botanische Zeichnung von Georg Forster, 1772.
+.</div>
                 </div>
               </div>
 
@@ -161,9 +187,12 @@
                   <div class="plantName">Blume 8</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
                   <div class="location-container">
-                    <div class="plantLocation">Halle</div>
+                    <div class="plantLocation">Vorkommen: unbekannt</div>
                   </div>
-                  <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+                  <div class="plantDiscription">Beschreibung: Strauch mit biegsamen dünnen Zweigen, der bis zu 1 m hoch werden kann. Die grünen Blätter sind
+                  wechselständig. Die Blüten haben einen grünen, kurz gefächerten Kelch und eine röhrenförmige
+                  Blumenkrone, die lila bis blau farbig ist. Botanische Zeichnung von Georg Forster, 1772/73.
+</div>
                 </div>
               </div>
 
@@ -176,9 +205,12 @@
                   <div class="plantName">Blume 9</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
                   <div class="location-container">
-                    <div class="plantLocation">Halle</div>
+                    <div class="plantLocation">Vorkommen: Jemen</div>
                   </div>
-                  <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+                  <div class="plantDiscription">Beschreibung: Ein ziemlich seltenes Gewächs mit glatter oder grauer Rinde, an dem sich die ovale, zugespitzten, leicht
+                  stachligen Blätter gegenüber stehen. Die Blüten stehen sich auch axial gegenüber. Sie sind Kelchförmig und haben
+                  eine dunkle violette Farbe. Botanische Zeichnung von Georg Schweinfurth, 1881.
+</div>
                 </div>
               </div>
 
@@ -191,9 +223,11 @@
                   <div class="plantName">Blume 10</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
                   <div class="location-container">
-                    <div class="plantLocation">Halle</div>
+                    <div class="plantLocation">Vorkommen: Mittelmeerraum bis Mittelasien</div>
                   </div>
-                  <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+                  <div class="plantDiscription">Beschreibung: Sträucher mit einer Wuchshöhe bis zu 1,5m. Kennzeichnendes Merkmal sind kleine, kugelige, zylindrische
+                  Seitenzweige. Häufig als einziges Gewächs auf der weiten Sandfläche. Botanische Zeichnung von Georg Schweinfurth, 1864.
+.</div>
                 </div>
               </div>
 
@@ -206,9 +240,12 @@
                   <div class="plantName">Blume 11</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
                   <div class="location-container">
-                    <div class="plantLocation">Halle</div>
+                    <div class="plantLocation">Vorkommen: Eritrea, Äthiopien, Sudan</div>
                   </div>
-                  <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+                  <div class="plantDiscription">Beschreibung: An Stämmen und kleinen Ästen von Bäumen entlang von Wasserläufen zu finden. Die Blätter sind linealisch,
+                  länglich oder elliptisch und variieren in der Textur. Die orchideeförmigen Blüten sind gelb. Botanische Zeichnung
+                  von Georg Schweinfurth, 1892.
+.</div>
                 </div>
               </div>
 
@@ -220,9 +257,12 @@
                   <div class="plantName">Blume 12</div>
                   <img class="plantImage" src="./src/images/noPlant.png">
                   <div class="location-container">
-                    <div class="plantLocation">Halle</div>
+                    <div class="plantLocation">Vorkommen: Zentral Afrika, Arabische Halbinsel, Indien</div>
                   </div>
-                  <div class="plantDiscription">Das ist eine tolle Pflanze.</div>
+                  <div class="plantDiscription">Beschreibung: Ein immergrünes Kraut. Der Stängel ist gerade und unverzweigt und wird 5-30 cm hoch. Die kurzen Blätter
+                  sind schuppig und hängen am Stängel herab. Die Blüten stehen sich wechselständig gegenüber. Der Kelch
+                  ist röhrenförmig, die Blüten sind weißlich, rosa oder hellblau. Botanische Zeichnung von Georg Schweinfurth, 1880.
+</div>
                 </div>
               </div>
 
